ETF/calculette.output
Grammaire

    0 $accept: axiome $end

    1 axiome: exp

    2 exp: exp PLUS terme
    3    | terme

    4 terme: terme MULT facteur
    5      | facteur

    6 facteur: PG exp PD
    7        | ID
    8        | CSTE


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
CSTE (258) 8
PG (259) 6
PD (260) 6
ID (261) 7
PLUS (262) 2
MULT (263) 4


Non-terminaux, suivis des règles où ils apparaissent

$accept (9)
    à gauche: 0
axiome (10)
    à gauche: 1, à droite: 0
exp (11)
    à gauche: 2 3, à droite: 1 2 6
terme (12)
    à gauche: 4 5, à droite: 2 3 4
facteur (13)
    à gauche: 6 7 8, à droite: 4 5


État 0

    0 $accept: . axiome $end

    CSTE  décalage et aller à l'état 1
    PG    décalage et aller à l'état 2
    ID    décalage et aller à l'état 3

    axiome   aller à l'état 4
    exp      aller à l'état 5
    terme    aller à l'état 6
    facteur  aller à l'état 7


État 1

    8 facteur: CSTE .

    $défaut  réduction par utilisation de la règle 8 (facteur)


État 2

    6 facteur: PG . exp PD

    CSTE  décalage et aller à l'état 1
    PG    décalage et aller à l'état 2
    ID    décalage et aller à l'état 3

    exp      aller à l'état 8
    terme    aller à l'état 6
    facteur  aller à l'état 7


État 3

    7 facteur: ID .

    $défaut  réduction par utilisation de la règle 7 (facteur)


État 4

    0 $accept: axiome . $end

    $end  décalage et aller à l'état 9


État 5

    1 axiome: exp .
    2 exp: exp . PLUS terme

    PLUS  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 1 (axiome)


État 6

    3 exp: terme .
    4 terme: terme . MULT facteur

    MULT  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 3 (exp)


État 7

    5 terme: facteur .

    $défaut  réduction par utilisation de la règle 5 (terme)


État 8

    2 exp: exp . PLUS terme
    6 facteur: PG exp . PD

    PD    décalage et aller à l'état 12
    PLUS  décalage et aller à l'état 10


État 9

    0 $accept: axiome $end .

    $défaut  accepter


État 10

    2 exp: exp PLUS . terme

    CSTE  décalage et aller à l'état 1
    PG    décalage et aller à l'état 2
    ID    décalage et aller à l'état 3

    terme    aller à l'état 13
    facteur  aller à l'état 7


État 11

    4 terme: terme MULT . facteur

    CSTE  décalage et aller à l'état 1
    PG    décalage et aller à l'état 2
    ID    décalage et aller à l'état 3

    facteur  aller à l'état 14


État 12

    6 facteur: PG exp PD .

    $défaut  réduction par utilisation de la règle 6 (facteur)


État 13

    2 exp: exp PLUS terme .
    4 terme: terme . MULT facteur

    MULT  décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 2 (exp)


État 14

    4 terme: terme MULT facteur .

    $défaut  réduction par utilisation de la règle 4 (terme)
